tests/valid/assign/basic_replace_mut.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    (replace x 42)
}
