tests/invalid/immutable_assign/immutable_replace.facet
fn f(x: unrestricted isize) -> unrestricted isize {
    (replace x 42)
}
